# factory-method-pattern-cpp

./: CMakeLists.txt  README.md
headers/: Game.hpp  GameCreator.hpp  IProduct.hpp  IProductCreator.hpp  Movie.hpp  MovieCreator.hpp
src/: Game.cpp  GameCreator.cpp  IProduct.cpp  IProductCreator.cpp  Movie.cpp  MovieCreator.cpp  main.cpp
tests/: Game-ut.cpp  GameCreator-ut.cpp  Movie-ut.cpp  MovieCreator-ut.cpp
